# rustychart

./: .dockerignore  .env.local  .gitignore  .vercelignore  Cargo.toml  Dockerfile  README.md  fly.toml  vercel.json
alpha-vantage-client/: Cargo.toml
alpha-vantage-client/src/: lib.rs
app-shell/: Cargo.toml
app-shell/src/: lib.rs
backend/: Cargo.toml
backend/src/: main.rs
chart-frontend/: Cargo.toml
chart-frontend/src/: lib.rs
chart-frontend/src/shaders/: candle.frag  candle.vert  line.frag  line.vert
data-feed/: Cargo.toml
data-feed/src/: lib.rs
gpu_param_sweep/: Cargo.toml
gpu_param_sweep/src/: lib.rs  shader.wgsl
regime-engine/: Cargo.toml
regime-engine/src/: lib.rs
scan-engine/: Cargo.toml
scan-engine/src/: lib.rs
script-builder/src/: lib.rs
script-engine/: Cargo.toml
script-engine/src/: ai.rs  assist.rs  compat.rs  docs.rs  incremental.rs  js_facade.rs  language.rs  lib.rs  manifest.rs  remediation.rs  sandbox.rs  templates.rs  wasm.rs
script-engine/src/parser/: mod.rs  pine.rs  think.rs
scripts/: build-wasm.sh
ta-engine/: Cargo.toml
ta-engine/src/: lib.rs
ts-core/: Cargo.toml
ts-core/src/: lib.rs
ui/: Cargo.toml
ui/src/: app.rs  chart.rs  lab.rs  lib.rs  main.rs  perf.rs  state.rs  theme.rs
web/: index.html
