[package]
name = "app-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
ts-core = { path = "../ts-core" }
ta-engine = { path = "../ta-engine" }
chart-frontend = { path = "../chart-frontend" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = { version = "0.5", features = ["http"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlDivElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "DomRect",
    "CssStyleDeclaration",
    "console",
] }
