[package]
name = "chart-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ts-core = { path = "../ts-core" }
data-feed = { path = "../data-feed", default-features = false }
ta-engine = { path = "../ta-engine" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "WebGl2RenderingContext",
    "WebGlVertexArrayObject",
    "WebGlProgram",
    "WebGlShader",
    "WebGlVertexArrayObject",
    "WebGlBuffer",
    "EventTarget",
    "MouseEvent",
    "WheelEvent",
    "DomRect",
    "Performance",
    "Event",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
gloo-net = { version = "0.5", features = ["http", "websocket"] }

