[package]
name = "gpu_param_sweep"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
wgpu = "27"
bytemuck = { version = "1.15", features = ["derive"] }
anyhow = "1.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[features]
default = []
wasm-bench = ["js-sys", "web-sys"]
