 [package]
 name = "scan-engine"
 version = "0.1.0"
 edition = "2021"

 [dependencies]
 async-trait = "0.1"
 futures = "0.3"
 serde = { version = "1", features = ["derive"] }
 thiserror = "1"
 rand = "0.8"
 ts-core = { path = "../ts-core" }
 ta-engine = { path = "../ta-engine" }
 gpu_param_sweep = { path = "../gpu_param_sweep" }
