[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Default to server-side rendering only; enable "hydrate" explicitly for wasm builds.
default = ["ssr"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:axum", "dep:tokio", "dep:leptos_axum", "dep:tower", "dep:tower-http"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "dep:wasm-bindgen", "dep:console_error_panic_hook"]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr", "dep:wasm-bindgen", "dep:console_error_panic_hook"]

[dependencies]
axum = { version = "0.7", optional = true, features = ["macros", "http1", "http2", "ws"] }
leptos = { version = "0.6", default-features = false }
leptos_axum = { version = "0.6", optional = true }
leptos_meta = { version = "0.6", default-features = false }
leptos_router = { version = "0.6", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", optional = true, features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", optional = true, features = ["fs", "trace"] }
app-shell = { path = "../app-shell" }
ta-engine = { path = "../ta-engine" }
ts-core = { path = "../ts-core" }
data-feed = { path = "../data-feed" }
thiserror = "1"
cfg-if = "1"
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
scan-engine = { path = "../scan-engine" }
regime-engine = { path = "../regime-engine" }
gpu_param_sweep = { path = "../gpu_param_sweep" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chart-frontend = { path = "../chart-frontend" }
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-net = { version = "0.6", features = ["http"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
leptos = { version = "0.6", default-features = false }
leptos_meta = { version = "0.6", default-features = false }
leptos_router = { version = "0.6", default-features = false }

[dev-dependencies]
serde_json = "1"
